<resources>
    <string name="app_name">12 Reasons Why</string>

    <string name="month_1">Month #1</string>
    <string name="month_2">Month #2</string>
    <string name="month_3">Month #3</string>
    <string name="month_4">Month #4</string>
    <string name="month_5">Month #5</string>
    <string name="month_6">Month #6</string>
    <string name="month_7">Month #7</string>
    <string name="month_8">Month #8</string>
    <string name="month_9">Month #9</string>
    <string name="month_10">Month #10</string>
    <string name="month_11">Month #11</string>
    <string name="month_12">Month #12</string>

    <string name="number_of_visits">Number of visits: %s</string>

    <string-array name="month_2_visits_reactions">
        <item>É muito bom estar contigo.</item>
        <item>Nossa, mas vc já entrou bastante aqui.</item>
        <item>Bebê, sério. Não precisa mais entrar nesse mês.</item>
        <item>Se entrar aqui de novo eu vou me auto destruir. Sério.</item>
        <item>Era mentira hehehehheheheh</item>
        <item>Eu te amo s2</item>
    </string-array>

    <string name="month_3_vibrator_toggle">Toggle Me ;)</string>

    <string name="month_4_celebrations">Parabéns, meu amor!\nObrigado por me aguentar!</string>

    <string name="month_5_guess_1">O espaço entre o cu e a piroca?</string>
    <string name="month_5_guess_2">O espaço entre o cu e a periquita?</string>
    <string name="month_5_guess_3">Queria ficar em casa mas acabei \ncomprando uma…?</string>
    <string name="month_5_guess_4">Amor, tira a … lá de fora?</string>
    <string name="month_5_guess_5">Qual a cor da sua bala favorita?</string>
    <string name="month_5_validate">Validate</string>
    <string name="month_5_right_guess_1">Curoca</string>
    <string name="month_5_right_guess_2">Curica</string>
    <string name="month_5_right_guess_3">Peneira</string>
    <string name="month_5_right_guess_4">Roupa</string>
    <string name="month_5_right_guess_5">Amarela</string>

    <string name="month_6_naval_battle">BATALHA NAVAL</string>

    <string name="month_7_iris">Iris</string>
    <string name="month_7_glaucia">Gláucia</string>
    <string name="month_7_susy">Nós</string>

    <string name="month_8_number">8</string>
    <string name="month_8_days_counter">Estamos juntos há: \n%1$s dias.\n\nObrigado, amor!</string>

    <string-array name="month_9_sequence_items">
        <item>Bacalhau a Brás</item>
        <item>Rato</item>
        <item>Passaro</item>
        <item>Shingeki</item>
        <item>Rolha</item>
        <item>Rosa</item>
        <item>Shokugeki</item>
        <item>Tomates</item>
        <item>Barata Tonta</item>
        <item>Tinto Maduro</item>
        <item>Bananeira</item>
        <item>Fera</item>
        <item>Brasileiro</item>
        <item>Telhado</item>
    </string-array>

    <string name="month_9_kiss_quantity">Você merece: %s beijos!</string>
    <string name="month_9_poem"><b>Ser ou não ser?</b>\n\
        Eis a questão\n
        Ás vezes tenho fome\n
        Então chamo o mozão\n\n

        O Tiago pede pão de frutos vermelhos todo dia\n
        O José, sem muito pensar, o copia todavia\n\n

        Às vezes o assunto é feminismo; pesado\n
        Por pouco a briga é impedida pela pergunta de um café passado\n\n

        Olhar o sorrisinho dele, diz ao meu coração que pare\n
        No café, na cama, na gare\n\n

        Sem mais me ausento, porque um simples graduando também tem trabalho\n
        Se alguém não gostou deste poema, pode bem ir pó car*lho</string>

    <string name="month_11_animal_crossing_text">Oi José, \n
    Me disseram que hoje você faz aniversário de 11 meses de namoro com o Tiago\n
    é verdade?</string>

    <string name="month_11_animal_task_deny">Ah! Ele deve ter contado errado, então.
    \n\nEle é burro as vezes. Não liga. Até a próxima.</string>

    <string name="month_11_animal_task">Ah! Deve ter sido difícil até agora.
    \n\nSim, sim.
    \nJunte esses materiais pra eu lhe dar seu prêmio.</string>

    <string name="month_11_yes">Yes, yes!</string>
    <string name="month_11_no">No :(</string>

    <string name="month_11_choice_1">3 folhas de manjericão</string>
    <string name="month_11_choice_2">1 capsula de café</string>
    <string name="month_11_choice_3">1 frasco de tempero</string>
    <string name="month_11_choice_4">3 beijinhos</string>

</resources>

