<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <Button
                android:id="@+id/month_1"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_1" />

            <Button
                android:id="@+id/month_2"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_2" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/month_3"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_3"
                android:transitionName="@string/month_3" />

            <Button
                android:id="@+id/month_4"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_4" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/month_5"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_5" />

            <Button
                android:id="@+id/month_6"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_6" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/month_7"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_7" />

            <Button
                android:id="@+id/month_8"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_8" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/month_9"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_9" />

            <Button
                android:id="@+id/month_10"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_effect"
                android:text="@string/month_10" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/month_11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_drawable_blue"
        android:textColor="@android:color/white"
        android:text="@string/month_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>