<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/month_11_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="month_11_yes,month_11_no" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:src="@drawable/animalcrossing_dialogbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month_11_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/month_11_animal_crossing_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/month_11_tom_nook"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/tomnook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/month_11_yes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/animal_crossing_leaf"
        android:text="@string/month_11_yes"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/month_11_no"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/animal_crossing_leaf"
        android:text="@string/month_11_no"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/month_11_choice_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/month_11_choice_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_11_choice_1"/>

        <RadioButton
            android:id="@+id/month_11_choice_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_11_choice_2"/>

        <RadioButton
            android:id="@+id/month_11_choice_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_11_choice_3"/>

        <RadioButton
            android:id="@+id/month_11_choice_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_11_choice_4"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>