<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Month1Fragment">

    <Button
        android:id="@+id/month_7_glaucia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_7_glaucia"
        app:layout_constraintBottom_toTopOf="@+id/month_7_iris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/month_7_iris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_7_iris"
        app:layout_constraintBottom_toTopOf="@+id/month_7_susy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_7_glaucia" />

    <Button
        android:id="@+id/month_7_susy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_7_susy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_7_iris" />


</androidx.constraintlayout.widget.ConstraintLayout>