<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Month1Fragment">


    <TextView
        android:id="@+id/month_5_phrase_3"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/month_5_guess_3"
        app:layout_constraintEnd_toStartOf="@+id/month_5_guess_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_5_phrase_2" />

    <TextView
        android:id="@+id/month_5_phrase_1"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/month_5_guess_1"
        app:layout_constraintEnd_toStartOf="@+id/month_5_guess_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month_5_phrase_2"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/month_5_guess_2"
        app:layout_constraintEnd_toStartOf="@+id/month_5_guess_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_5_phrase_1" />

    <TextView
        android:id="@+id/month_5_phrase_5"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/month_5_guess_5"
        app:layout_constraintEnd_toStartOf="@+id/month_5_guess_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_5_phrase_4" />

    <EditText
        android:id="@+id/month_5_guess_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_5_phrase_1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/month_5_guess_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_5_phrase_2"
        app:layout_constraintTop_toBottomOf="@+id/month_5_guess_1" />

    <EditText
        android:id="@+id/month_5_guess_3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_5_phrase_3"
        app:layout_constraintTop_toBottomOf="@+id/month_5_guess_2" />

    <EditText
        android:id="@+id/month_5_guess_4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_5_phrase_4"
        app:layout_constraintTop_toBottomOf="@+id/month_5_guess_3" />

    <EditText
        android:id="@+id/month_5_guess_5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_5_phrase_5"
        app:layout_constraintTop_toBottomOf="@+id/month_5_guess_4" />

    <TextView
        android:id="@+id/month_5_phrase_4"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/month_5_guess_4"
        app:layout_constraintEnd_toStartOf="@+id/month_5_guess_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_5_phrase_3" />

    <EditText
        android:id="@+id/month_5_validate_phrase"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/month_5_validate_guesses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/month_5_validate_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_pink"
        android:text="@string/month_5_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>